* Jun 1 hship

Fix an IllegalStateException thrown in the ApplicationServlet
(when deciding whether to store the engine into the session).  Fix another
exception thrown when the restart action is triggered on a stateless
application.

[429157] restart session fails
[429447] Restart throws exception

* May 30 hship

Many minor changes to support stateless Tapestry applications (the HttpSession is
not created until really needed).
Allow Form to be stateless.
Cleanup a bunch of innacurate Javadoc.
Add additional types to ServiceLinkEventType.

* May 25 2001 hship

Created the IAction interface so that the action service can ask components
whether they require a session or not.
Add a stateful parameter to Action and Direct.
Move the stale session check from the direct service to the Direct component.
Fix the action and direct services to handle cases where an InsertBlock has been
used to includes components from a page other than the render page.

[233087] direct service should not require a session (untested)
[427432] Block from other page causes errors (untested)

* May 24 2001 hship

Change the Inspector to show any properties associated with a component's
specification.  Also, change the Engine tab to show the Tapestry framework
version.  Have the specification parser reject specifications with
unknown public ids.
Add support for directly accessing public instance variables of classes
(that implement the IPublicBean marker interface).
Add a getName() method to IEngineService, and a getService() method to
IRequestCycle.
Remove the ChangeLog in framework; this ChangeLog will contain changes
to the framework going forward.
Add code to AbstractApplication to clear all cached pages, specifications and templates
at the end of the request cycle (if enabled by a JVM system property).
Upgrade to Log4J 1.1.1.
Revise the Script component and friends, allowing for conditionals, looping and
accessing of properties via property paths.

[417086] Tapestry inspector omits data